K8s/vote/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: vote
  ports:
  - port: 8080
    targetPort: 8080
